Add: auth swagger yaml 작성
auth 경로에 있는 api 문서 작성 완료
