# src/swagger/paths/auth.yaml
@@ -2,7 +2,7 @@ paths:
   /auth/signup:
     post:
       tags:
-        - Auth
+        - auth
       summary: 회원가입
       requestBody:
         required: true
@@ -36,7 +36,7 @@ paths:
   /auth/signin:
     post:
       tags:
-        - Auth
+        - auth
       summary: 로그인
       requestBody:
         required: true
@@ -57,3 +57,45 @@ paths:
           description: 로그인 성공
         '400':
           description: 누락된 데이터가 있습니다.
+
+  /auth/signin/password-reset:
+    put:
+      tags:
+        - auth
+      summary: 비밀번호 초기화
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              name:
+                type: string
+              email:
+                type: string
+              phone:
+                type: string
+              example:
+                name: John
+                email: test@test.com
+                phone: 010-1234-5678
+      responses:
+        '200':
+          description: 비밀번호가 초기화 됐습니다.
+        '400':
+          description: 누락된 데이터가 있습니다.
+        '404':
+          description: 없는 사용자 입니다.
+
+  /auth/user-info:
+    get:
+      tags:
+        - auth
+      securitySchemes:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: 토큰이 확인됐습니다.
+        '400':
+          description: 유효하지 않은 토큰입니다.
+        '401':
+          description: Authorization 헤더가 없습니다.
